add id to dropdown tag

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 	<p>limbo</p>
 	<p><strong>in order of appearance:</strong></p>
 	<ol>
-	    <li>A kidney is a / an<select>
-  <option value="0">hormone</option>
-  <option value="0">gland</option>
-  <option value="1">organ</option>
-  <option value="0">neurotransmittor</option>
-</select></li>
-	    <li>julius caesar</li>
-	    <li>socrates</li>
+	  <li>A kidney is a / an 
+	    <select> id="drop"
+	      <option value="0">hormone</option>
+  	      <option value="0">gland</option>
+  	      <option value="1">organ</option>
+  	      <option value="0">neurotransmittor</option>
+	   </select></li>
+	   <li>julius caesar</li>
+	   <li>socrates</li>
 	</ol>
     <a href="https://briscagit.github.io">back</a>
     <script src="scripts/main.js"></script>
