add score to htmml

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	   <li>julius caesar</li>
 	   <li>socrates</li>
 	</ol>
+    <p id="score"></p>
     <a href="https://briscagit.github.io">back</a>
     <script src="scripts/main.js"></script>
   </body>
