add second question

--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
 	<p><strong>in order of appearance:</strong></p>
 	<ol>
 	  <li>A kidney is a / an 
-	    <select> id="drop"
+	    <select> id="drop1"
 	      <option value="0">hormone</option>
   	      <option value="0">gland</option>
   	      <option value="1">organ</option>
   	      <option value="0">neurotransmittor</option>
-	   </select></li>
-	   <li>julius caesar</li>
-	   <li>socrates</li>
+	    </select></li>
+	  <li>           
+	       <select> The function of the nephron is to alter the blood plasma that flows into it by id="drop2"
+                 <option value="0">filtration</option>
+                 <option value="0">reabsorption</option>
+                 <option value="0">secretion</option>
+                 <option value="0">excretion</option>
+		 <option value="1">all of the above</option>
+               </select>
+	  </li>
+	  <li>socrates</li>
 	</ol>
     <p id="score"></p>
     <a href="https://briscagit.github.io">back</a>
