fixed misplaced question

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   	      <option value="1">organ</option>
   	      <option value="0">neurotransmittor</option>
 	    </select></li>
-	  <li>           
-	       <select> The function of the nephron is to alter the blood plasma that flows into it by id="drop2"
+	  <li> The function of the nephron is to alter the blood plasma that flows into it by 
+	       <select> id="drop2"
                  <option value="0">filtration</option>
                  <option value="0">reabsorption</option>
                  <option value="0">secretion</option>
