add inline script

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 	  <li>socrates</li>
 	</ol>
     <p id="score"></p>
+    <script>
+      document.getElementById("score").innerHTML = 5 + 6;
+    </script>
     <a href="https://briscagit.github.io">back</a>
     <script src="scripts/main.js"></script>
   </body>
