polish html content

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-<!-- <h1> cabbage box </h1> -->
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>inferno</title>
+    <title>Quiz</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=UnifrakturMaguntia" rel="stylesheet">
   </head>
   <body>
-    <h1>first circle</h1>
-	<p>limbo</p>
-	<p><strong>in order of appearance:</strong></p>
+    <h1>Quiz</h1>
+	<p>Kidney</p>
+	<p><strong>Multiple choice:</strong></p>
 	<ol>
 	  <li>A kidney is a / an 
 	    <select> id="drop1"
